Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-32478

[Regression QtC14->QtC15] Remote debugging a QNX application is no longer possible

XMLWordPrintable

    • 27aa01d25 (16.0), 131a094a8 (16.0)

      First of all, QML debugging is done in the wrong syntax. First, prepare any Qt Quick project (literally any so any of our examples and even a boilerplate will do - and I am not providing a specific reproducer here), build, and debug it. The debug command goes like:

      Starting pdebug 10000 "-qmljsdebugger=port:10001,block,services:DebugMessages,QmlDebugger,V8Debugger,QmlInspector,DebugTranslation" on QNX Device i.MX8...
      

      None of the arguments passed to pdebug (other than port number) is valid. Pdebug only recognizes those arguments:
      https://www.qnx.com/developers/docs/7.1/#com.qnx.doc.neutrino.utilities/topic/p/pdebug.html
      And somehow those QML debugging ones get into pdebug side.

      Next step, disable QML debugging from "Build and Run -> Run", and retry debugging. This time, all weird arguments are gone and only port number is passed to pdebug. But still debugging does not work.

      Like, breakpoint is set but not respected. No information comes to QtC anyway. No logs, no local variables, nothing.

      Finally, a minor issue is that force stopping debugging from QtC side (click the red square button) doesn't seem to actually stop debugging. If you check what are being run on QNX device, you'd see multiple pdebug processes like

      # ps
             PID TTY          TIME CMD
           90146 ?        00:00:00 ksh
          118822 ?        00:00:00 sshd
          135209 ?        00:00:00 resarb
          294957 ?        00:00:00 sshd
          192558 ?        00:00:00 ksh
          200751 ?        00:00:00 inetd
          303152 ?        00:00:00 sh
          307249 ?        00:00:00 sh
          340018 ?        00:00:00 sh
          364595 ?        00:00:00 sh
          385076 ?        00:00:00 sh
          385077 ?        00:00:00 sh
         7335990 ?        00:00:00 ps
         1310778 ?        00:00:00 pdebug
         4689979 ?        00:00:00 pdebug
      

      Obviously they are leftovers from failed debug session.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            jkobus Jarek Kobus
            luqiaochen Luqiao Chen
            Votes:
            1 Vote for this issue
            Watchers:
            6 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes